[package]
license = "Apache-2.0"
name = "mull-computer-hub-core"
version = "0.1.0"
edition.workspace = true
description = "Transport, ToolRegistry, and resolver abstractions for the Palmshed Computer Hub"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
mull-tool-protocol = { workspace = true }
mull-tool-runtime = { workspace = true }
mull-tool-types = { workspace = true }

[dev-dependencies]
dashmap = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util", "sync"] }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
