[package]
license = "Apache-2.0"
name = "mull-computer-hub-mcp-adapter"
version = "0.1.0"
edition.workspace = true
description = "Bridge between MCP servers and the Palmshed Computer Hub, registering MCP-discovered tools as native hub tools."

[features]
metrics = ["dep:prometheus"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
prometheus = { workspace = true, optional = true }

mull-tool-protocol = { workspace = true }
mull-tool-runtime = { workspace = true }
mull-tool-types = { workspace = true }
mull-computer-hub-sdk = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
futures = { workspace = true }

[lints]
workspace = true
