[package]
license = "Apache-2.0"
name = "mull-tool-protocol"
version = "0.1.0"
edition.workspace = true
description = "Wire-protocol types for the Palmshed Computer Hub"

[dependencies]
mull-tool-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[lints]
workspace = true
